--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,40 +1,41 @@
-pipeline{
-  agents any 
-     environment{
-        docker_image= 'mohanaswararajn/docker_jenkins:v1'
-       }
+pipeline {
+    agent any
 
-stages{
-  stage("Check-out"){
-    steps{
-      git branch : 'main', url:' https://github.com/Mohanaswararaj/Chat_jen.git'  
+    environment {
+        docker_image = 'mohanaswararajn/docker_jenkins:v1'
     }
-}
-  stages("build image"){
-    steps{
-          sh '''
-              echo "building image"
-              docker build -t Dockerfile $docker_image .
-            '''
-        }
-  }
 
-  stage("push the docker images"){
-    steps{
-          script{
-                    withCredentials([usernamePassword(credentialsId: 'dockerhub', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')])
-                    {
-                        sh  '''
-                               echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin || exit 1
-                               docker push $docker_image
-                          '''
+    stages {
+        stage("Check-out") {
+            steps {
+                git branch: 'main', url: 'https://github.com/Mohanaswararaj/Chat_jen.git'
+            }
+        }
+
+        stage("Build image") {
+            steps {
+                sh '''
+                    echo "Building Docker image"
+                    docker build -t $docker_image .
+                '''
+            }
+        }
+
+        stage("Push Docker image") {
+            steps {
+                script {
+                    withCredentials([usernamePassword(credentialsId: 'dockerhub', usernameVariable: 'DOCKER_USER', passwordVariable: 'DOCKER_PASS')]) {
+                        sh '''
+                            echo "$DOCKER_PASS" | docker login -u "$DOCKER_USER" --password-stdin
+                            docker push $docker_image
+                        '''
                     }
                 }
-          }
-      }
+            }
+        }
+    }
 
-
-  post {
+    post {
         success {
             echo 'Pipeline completed successfully'
         }
